--- a/Project/templates/base.html
+++ b/Project/templates/base.html
@@ -66,7 +66,7 @@
  <section id="intro">
     <div class="intro-container" data-aos="zoom-in" data-aos-delay="100">
       <h1 class="mb-4 pb-0">°EduLink</span> </h1>
-      <p class="mb-4 pb-0">A student database management system utilising Flask & MySQL.</p>
+      <p class="mb-4 pb-0">A student database management system utilising Flask and MySQL</p>
     
       <a href="" class="about-btn scrollto">View More</a>
     </div>
